--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>⚔️ Alzaeem High Page ⚔️</title>
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4712/4712108.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(120deg, #000, #111, #222);
+      color: #fff;
+      text-align: center;
+      overflow-x: hidden;
+    }
+    header {
+      font-size: 42px;
+      padding: 40px 10px;
+      color: gold;
+      text-shadow: 0 0 20px gold, 0 0 40px orange;
+      animation: glow 2s infinite alternate;
+    }
+    @keyframes glow {
+      from { text-shadow: 0 0 10px gold; }
+      to { text-shadow: 0 0 30px orange; }
+    }
+    .content {
+      padding: 60px;
+    }
+    .card {
+      background: rgba(255,255,255,0.1);
+      margin: 30px auto;
+      padding: 25px;
+      border-radius: 15px;
+      width: 70%;
+      box-shadow: 0 0 25px rgba(255,215,0,0.3);
+      transition: 0.3s;
+    }
+    .card:hover {
+      transform: scale(1.05);
+      background: rgba(255,255,255,0.15);
+    }
+    button {
+      background: gold;
+      border: none;
+      padding: 12px 30px;
+      font-size: 18px;
+      border-radius: 10px;
+      cursor: pointer;
+      color: black;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: orange;
+      transform: scale(1.1);
+    }
+    footer {
+      padding: 20px;
+      background: rgba(0,0,0,0.3);
+      font-size: 14px;
+      color: #aaa;
+    }
+  </style>
+</head>
+<body>
+  <header>⚔️ Alzaeem Tech Portal ⚔️</header>
+  <div class="content">
+    <div class="card">
+      <h2>Welcome to the Future</h2>
+      <p>AI • Cyber Defense • Innovation</p>
+      <button onclick="window.open('https://github.com/mohamedyhyamostafa-tech','_blank')">
+        Visit GitHub <i class="fa-brands fa-github"></i>
+      </button>
+    </div>
+    <div class="card">
+      <h3>Power. Intelligence. Glory.</h3>
+      <p>⚔️ Where minds meet technology ⚔️</p>
+    </div>
+  </div>
+  <footer>© 2025 Alzaeem Tech - All Rights Reserved</footer>
+</body>
+</html>
